--- a/readme.html
+++ b/readme.html
@@ -12,6 +12,7 @@
 <h3 align="left">Connect with me:</h3>
 <p align="left">
 <a href="https://www.linkedin.com/in/jkvd/" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/linked-in-alt.svg" alt="Joshua Kenneth Van Dyon" height="30" width="40" /></a>
+<a href="https://fb.com/m.n.wahabi" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/facebook.svg" alt="m.n.wahabi" height="30" width="40" /></a>
 <a href="https://instagram.com/jokenntt" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/instagram.svg" alt="jokenntt" height="30" width="40" /></a>
 <a href="https://www.youtube.com/c/KennethVD" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/youtube.svg" alt="KennethVD" height="30" width="40" /></a>
 <a href="https://www.hackerrank.com/rendankjengkol" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/hackerrank.svg" alt="rendankjengkol" height="30" width="40" /></a>
